[feat] 여행계획-날짜선택 페이지 완성 및 여행계획-장소선택 페이지 레이아웃 제작

--- a/frontend/src/assets/scss/abstracts/abstracts.scss
+++ b/frontend/src/assets/scss/abstracts/abstracts.scss
@@ -12,13 +12,13 @@ input[type="date"] {
   margin-bottom: 20px;
 
   /* Date field placeholder text removal */
-  &::-webkit-datetime-edit-text,
-  &::-webkit-datetime-edit-month-field,
-  &::-webkit-datetime-edit-day-field,
-  &::-webkit-datetime-edit-year-field {
-    -webkit-appearance: none;
-    display: none;
-  }
+  // &::-webkit-datetime-edit-text,
+  // &::-webkit-datetime-edit-month-field,
+  // &::-webkit-datetime-edit-day-field,
+  // &::-webkit-datetime-edit-year-field {
+  //   -webkit-appearance: none;
+  //   display: none;
+  // }
 
   /* Calendar icon styling */
   &::-webkit-calendar-picker-indicator {
